<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/phoneFragment"
        android:icon="@drawable/baseline_call_24"
        android:title="@string/phone" />
    <item
        android:id="@+id/chosenFragment"
        android:icon="@drawable/baseline_add_reaction_24"
        android:title="@string/chosen" />

    <item
        android:id="@+id/previousFragment"
        android:icon="@drawable/baseline_access_time_24"
        android:title="@string/previous" />

    <item
        android:id="@+id/contactsFragment"
        android:icon="@drawable/baseline_contact_phone_24"
        android:title="@string/contacts" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/baseline_app_settings_alt_24"
        android:title="@string/settings" />

</menu>